--- a/src/View/MediaPlayer.form
+++ b/src/View/MediaPlayer.form
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1080, 608]"/>
-    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -26,20 +23,14 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <Component id="jButtonTambahDurasi" min="-2" pref="124" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
-                  </Group>
-                  <Group type="102" attributes="0">
-                      <Component id="jLabelSelamatDatang" min="-2" pref="109" max="-2" attributes="0"/>
-                      <EmptySpace pref="849" max="32767" attributes="0"/>
-                      <Component id="jButtonLeave" min="-2" pref="95" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="jLabelWelcome" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabelTimeRemaining" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="jButtonAddDuration" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace pref="293" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -47,37 +38,33 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="jButtonLeave" pref="36" max="32767" attributes="0"/>
-                  <Component id="jLabelSelamatDatang" max="32767" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-              <Component id="jButtonTambahDurasi" min="-2" pref="31" max="-2" attributes="0"/>
-              <EmptySpace pref="505" max="32767" attributes="0"/>
+              <Component id="jLabelWelcome" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jLabelTimeRemaining" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jButtonAddDuration" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="227" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="jLabelSelamatDatang">
+    <Component class="javax.swing.JLabel" name="jLabelWelcome">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Selamat Datang"/>
+        <Property name="text" type="java.lang.String" value="Selamat Datang, "/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButtonTambahDurasi">
+    <Component class="javax.swing.JLabel" name="jLabelTimeRemaining">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Tambah Durasi"/>
+        <Property name="text" type="java.lang.String" value="Time Remaining: "/>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonTambahDurasiActionPerformed"/>
-      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButtonLeave">
+    <Component class="javax.swing.JButton" name="jButtonAddDuration">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Leave"/>
+        <Property name="text" type="java.lang.String" value="Add Duration"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonLeaveActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonAddDurationActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
