--- a/src/View/MediaPlayer.form
+++ b/src/View/MediaPlayer.form
@@ -232,7 +232,7 @@
 
                   <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
                   <SubComponents>
-                    <Component class="javax.swing.JTextPane" name="jTextPane1">
+                    <Component class="javax.swing.JTextPane" name="PanelLyric">
                     </Component>
                   </SubComponents>
                 </Container>
